[tool.poetry]
name = "znpy"
version = "0.1.0"
description = ""
authors = ["zweix123 <1979803044@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
tzlocal = "4.2"
pyside6 = "6.3.0"
pyqtgraph = "0.12.4"
qdarkstyle = "3.1"
numpy = "1.23.1"
pandas = "1.5.0"
matplotlib = "3.5.3"
seaborn = "0.11.2"
deap = "1.3.3"
pyzmq = "23.2.1"
plotly = "5.10.0"
importlib-metadata = "4.12.0"
tqdm = "4.64.1"
requests = "^2.28.2"
types-requests = "^2.28.11.17"
aiohttp = "^3.8.4"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
